<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.scharp</groupId>
    <artifactId>sas7bdat</artifactId>
    <version>0.9.0</version>
    <packaging>jar</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>A library for writing SAS7BDAT datasets</description>
    <url>https://github.com/FredHutch/sas7bdat</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>David Costanzo</name>
            <email>dcostanz@fredhutch.org</email>
            <organization>Fred Hutchinson Cancer Center</organization>
            <organizationUrl>https://fredhutch.org</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/FredHutch/sas7bdat.git</url>
    </scm>

    <issueManagement>
        <url>https://github.com/FredHutch/sas7bdat/issues</url>
    </issueManagement>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!-- dependencies needed for testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.epam</groupId>
            <artifactId>parso</artifactId>
            <version>2.0.14</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.36</version> <!-- old version for compatibility with parso -->
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>